[package]
name = "hptt"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "A wrapper to the C interface of the hptt (high performance tensor transpose) library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ectras/rust-hptt"
keywords = ["hptt", "transpose", "tensor"]
categories = ["api-bindings", "science", "algorithms"]
rust-version = "1.60"

[dependencies]
num-complex = "0.4.6"
hptt-sys = { path = "../hptt-sys" }

[dev-dependencies]
float-cmp = "0.10.0"
